--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <li><span>Web Development</span><br>HTML | CSS | JavaScript</li>
                             <li><span>App Development</span><br>Android Development</li>
                             <li><span>Problem Solving</span><br>Data Structures & Algorithm</li>
-                            <li><span>Knowledge</span><br>OOPs | Computer Networks | Computer Origanization</li>
+                            <li><span>Knowledge</span><br>OOPs | Computer Networks | Computer organization</li>
                         </ul>
                     </div>
                     <div class="tab-content II" id="education">    
