--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <a href="https://www.linkedin.com/in/hariom-tarakh"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/H4tarakh"><i class="fa-brands fa-github"></i></a>
                     </div>
-                        <a href="./Hariom_Tarakh_Resume.pdf" class="resume">Download CV</a>
+                        <a href="./Hm_Tarakh_Resume.pdf" class="resume">Download CV</a>
                 </div>
                 <div class="contact-2">
                     <form name="submit-to-google-sheet">
